// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`templates.js artist() should render "artist" template 1`] = `
"
    <h2 class=\\"h2\\">Kings Of Convenience</h2>
    <p>Kings of Convenience are an indie folk-pop duo from Bergen, Norway. Consisting of Erlend Øye and Eirik Glambek Bøe, the musical group is known for their delicate tunes, calming voices, and intricately subtle guitar melodies. Both Øye and Bøe sing in their tracks, and both of them compose.</p>
    <p>Members: <a href=\\"/artist/82343?page=1\\">Erlend Øye</a>, and <a href=\\"/artist/462316?page=1\\">Eirik Glambek Bøe</a></p>
  "
`;

exports[`templates.js artistsSearchResults() should render "no search results" template 1`] = `
"<h2>Search results for \\"The Beatles\\"</h2>
    No search results found
    <ul class=\\"grid\\">
    </ul>"
`;

exports[`templates.js artistsSearchResults() should render "results found" template 1`] = `
"<h2>Search results for \\"The Beatles\\"</h2>
      <p>1 results were found, viewing 1 to 1</p>
    <ul class=\\"grid\\">
    <li class=\\"grid-item\\">
      <a href=\\"/artist/82730?page=1\\">
        <img src=\\"https://img.discogs.com/nSd8gtJIO-fTzvI6C5BrXxv4YuQ=/150x150/smart/filters:strip_icc():format(jpeg):mode_rgb():quality(40)/discogs-images/A-82730-1319532331.jpeg.jpg\\" />
        <span class=\\"desc\\">The Beatles</span>
      </a>
    </li>
    </ul>"
`;

exports[`templates.js explodeArtists() should handle multiple artists 1`] = `"<a href=\\"/artist/82343?page=1\\">Erlend Øye</a>, <a href=\\"/artist/462316?page=1\\">Eirik Glambek Bøe</a>, and <a href=\\"/artist/123456?page=1\\">Feist</a>"`;

exports[`templates.js explodeArtists() should handle single artist 1`] = `"<a href=\\"/artist/82343?page=1\\">Erlend Øye</a>"`;

exports[`templates.js explodeArtists() should handle two artists 1`] = `"<a href=\\"/artist/82343?page=1\\">Erlend Øye</a>, and <a href=\\"/artist/462316?page=1\\">Eirik Glambek Bøe</a>"`;

exports[`templates.js getPagination() should handle empty pagination object 1`] = `""`;

exports[`templates.js getPagination() should handle first page pagination object 1`] = `
"
    <ol class=\\"pagination\\">
      <li>
        <span class=\\"disabled-link\\">&laquo;</span>
      </li>
      <li>
        <span class=\\"disabled-link\\">Previous page</span>
      </li>
      <li>
        <a href=\\"/endpoint?page=2\\">Next page</a>
      </li>
      <li>
        <a href=\\"/endpoint?page=20\\">&raquo;</a>
      </li>
    </ol>
  "
`;

exports[`templates.js getPagination() should handle last page pagination object 1`] = `
"
    <ol class=\\"pagination\\">
      <li>
        <a href=\\"/endpoint?page=1\\">&laquo;</a>
      </li>
      <li>
        <a href=\\"/endpoint?page=19\\">Previous page</a>
      </li>
      <li>
        <span class=\\"disabled-link\\">Next page</span>
      </li>
      <li>
        <span class=\\"disabled-link\\">&raquo;</span>
      </li>
    </ol>
  "
`;

exports[`templates.js getPagination() should handle middle page pagination object 1`] = `
"
    <ol class=\\"pagination\\">
      <li>
        <a href=\\"/endpoint?page=1\\">&laquo;</a>
      </li>
      <li>
        <a href=\\"/endpoint?page=9\\">Previous page</a>
      </li>
      <li>
        <a href=\\"/endpoint?page=11\\">Next page</a>
      </li>
      <li>
        <a href=\\"/endpoint?page=20\\">&raquo;</a>
      </li>
    </ol>
  "
`;

exports[`templates.js release() should render "release" template 1`] = `
"<h2 class=\\"h2\\">Quiet Is The New Loud</h2>
    <p>By <a href=\\"/artist/12634?page=1\\">Kings Of Convenience</a></p>
    <div>
      <img src=\\"https://img.discogs.com/W1ebskmATPP9dg6a2nWlvKk7Tmw=/fit-in/600x586/filters:strip_icc():format(jpeg):mode_rgb():quality(90)/discogs-images/R-76745-1237046610.jpeg.jpg\\" class=\\"artwork\\" />
    </div>
    <h3>Tracklist</h3>
    <ol>
        <li>Winning A Battle, Losing The War</a><li>Toxic Girl</a><li>Singing Softly To Me</a><li>I Don't Know What I Can Save You From</a><li>Failure</a><li>The Weight Of My Words</a><li>The Girl From Back Then</a><li>Leaning Against The Wall</a><li>Little Kids</a><li>Summer On The Westhill</a><li>The Passenger</a><li>Parallel Lines</a>
    </ol>"
`;

exports[`templates.js releaseList() should render "release list" template 1`] = `
"<h3 class=\\"h3\\">Releases</h2>
    <ol class=\\"pagination\\">
      <li>
        <span class=\\"disabled-link\\">&laquo;</span>
      </li>
      <li>
        <span class=\\"disabled-link\\">Previous page</span>
      </li>
      <li>
        <a href=\\"/artist/undefined?page=2\\">Next page</a>
      </li>
      <li>
        <a href=\\"/artist/undefined?page=6\\">&raquo;</a>
      </li>
    </ol>
    <ul class=\\"grid\\">
    <li class=\\"grid-item\\">
      <a href=\\"/release/957026\\">
        <img src=\\"https://img.discogs.com/W3h5I5Xfo7m9t4924foueqrFAmA=/fit-in/150x150/filters:strip_icc():format(jpeg):mode_rgb():quality(40)/discogs-images/R-957026-1389622269-8515.jpeg.jpg\\" />
        <span class=\\"desc\\">Brave New World</span>
      </a>
    </li>
    </ul>
    <ol class=\\"pagination\\">
      <li>
        <span class=\\"disabled-link\\">&laquo;</span>
      </li>
      <li>
        <span class=\\"disabled-link\\">Previous page</span>
      </li>
      <li>
        <a href=\\"/artist/undefined?page=2\\">Next page</a>
      </li>
      <li>
        <a href=\\"/artist/undefined?page=6\\">&raquo;</a>
      </li>
    </ol>"
`;

exports[`templates.js root() should render "root" template 1`] = `
"<h2>Currently trending on Discogs</h2>
    <ul class=\\"grid\\">
    <li class=\\"grid-item\\">
      <a href=\\"/release/13486052\\">
        <img src=\\"https://img.discogs.com/a30BikrMMGCgDsFY20CFcafi6Cg=/fit-in/150x150/filters:strip_icc():format(jpeg):mode_rgb():quality(40)/discogs-images/R-13486052-1555118466-5371.jpeg.jpg\\" />
        <span class=\\"desc\\">The Mighty Boosh - The Mighty Boosh - The Complete Radio Series</span>
      </a>
    </li>
    </ul>"
`;
